# erd-script

./: 404.html  Cargo.toml  README.md  erd_syntax.html  index.html  intro.html  online.html  physical_importing.html  physical_syntax.html  print.html  searchindex.js  searchindex.json  shell.nix
.github/workflows/: ci.yml
book/: book.toml  highlight-erd.js
book/src/: SUMMARY.md  erd_syntax.md  intro.md  online.md  physical_importing.md  physical_syntax.md
erd/: .gitignore  Cargo.toml
erd-wasm/: Cargo.toml  README.md  er.html  index.html  index2.html  physical.html  serve.py
erd-wasm/src/: lib.rs
erd/src/: ast.rs  dot.rs  draw.rs  erd.pest  erd.rs  lib.rs  main.rs  parser.rs  physical.rs  sql.rs
examples/: attribute.erd  binary_human_auto.erd  binary_human_hart.erd  binary_human_tooth.erd  binary_student_course.erd  circus.erd  entiteit.erd  graphviz_example.erd  identifier.erd  patients.erd  physical.erd  ternary.erd  unairy.erd
live/: er.html  physical.html
live/pkg/: erd_wasm.d.ts  erd_wasm.js  erd_wasm_bg.wasm  erd_wasm_bg.wasm.d.ts  package.json
pkg/: erd_wasm.d.ts  erd_wasm.js  erd_wasm_bg.wasm  erd_wasm_bg.wasm.d.ts  package.json
