[package]
name = "erd_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "erd_script"
path = "src/lib.rs"

[dependencies]
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
lazy_static = "1.5.0"